--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -57,7 +57,7 @@ To limit resource usage, a hard limit will also be included to put an upper boun
 
 \begin{figure}
     \centering
-    \includesvg[width=0.7\linewidth]{graphics/iterative_core_loop.drawio}
+    \includesvg[width=0.7\linewidth]{graphics/Iterative_core_loop}
     \caption{Visualization of a simple iterative optimization algorithm}
     \label{fig:iterative_core_loop}
 \end{figure}
