--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -13,11 +13,13 @@ Before the emergence of machine learning and \LLMs \textit{todo expand}
 \citewithauthor{delucia2012InformationRetrieval} have written about different \IR methods and their performance. \textit{Todo: Maybe write about the paper?}
 
 
-\citewithauthor{keim2021TraceLink} have proposed cross domain trace link recovery using agent like algorithms. \textit{Todo: Maybe read the paper?}
+\citewithauthor{keim2021TraceLink} have proposed cross domain trace link recovery using agent like algorithms. 
+%TODO: Maybe read the paper?}
 
 
 
 In previous work by \citewithauthor{fuchss2025LiSSAGeneric}, simple prompts by \citewithauthor{ewald2024RetrievalAugmentedLarge} were used to recover trace links between software documentation and architectural diagrams.
+The work of \citeauthor{ewald2024RetrievalAugmentedLarge} also builds on \citewithauthor{rodriguez2023PromptsMatter}.
 These prompts were manually designed and formulated.
 They have proven that they can already outperform other state-of-the-art approaches for source code related \TLR domains.
 
