--- a/sections/foundations.tex
+++ b/sections/foundations.tex
@@ -8,8 +8,9 @@ They will be explained in the following subsections.
 Traceability is \directQuote[]{the ability to find or follow something}{2025Traceability}, according to the Cambridge Dictionary.
 Meaning, there is evidence of some past occurrence.
 The task of \TLR in software engineering is to find instances of the same element across different software artifacts and link them for further processing.
-What these elements might look like is visualized in \autoref{fig:artifact_overview}.
+What these elements might look like was visualized in \autoref{fig:artifact_overview}.
 These traceability links help track relationships between, for example, code, requirements, diagrams, documentation, and other elements.
+This information 
 
 This becomes especially important when inconsistencies are introduced into the project's artifacts.
 As shown by \citewithauthor{wohlrab2019ImprovingConsistency}, inconsistencies in wording and language are quite common during different stages of development.
@@ -57,9 +58,11 @@ Once any candidate performs better than some threshold value or a maximum number
 
 \begin{figure}
 \centering
-\includesvg[width=0.7\linewidth]{graphics/gradient_descent.drawio}
+\includesvg[width=0.7\linewidth]{graphics/gradient_descent}
 \caption{Overview of the iterative optimization loop in~\cite{pryzant2023AutomaticPrompt}}
 \label{fig:gradient_descent}
+\end{figure}
+
 \begin{comment}
 TODO: 
 \begin{itemize}
@@ -67,7 +70,6 @@ TODO:
     \item symbolise core loop
 \end{itemize}
 \end{comment}
-\end{figure}
 
 The following subsections will explain each step of the \ProTeGi optimization in more detail.
 The \ProTeGi algorithm takes an initial prompt $p_0$ and training data $\{(x_1, y_1), \dots, (x_n, y_n)\}$ consisting of inputs and outputs.
