--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -1,45 +1,45 @@
 \chapter{Related Work}
-Trace link recovery through large language models is an active field of work to apply rapid advancements in LLM performance.
+\Acl{TLR} through large language models is an active field of work to apply rapid advancements in \LLM performance.
 This work rests at the intersection of two different fields of study.
 On the one hand side the field of \TLR does not always rely on \LLMs as shown in \autoref{related:sec:tlr}.
-On the other hand \APE has a much broader application and research than simply being focused on \TLR as expanded in \autoref{related:sec:ape}.
+On the other hand, \APE has a much broader application and research than simply being focused on \TLR as expanded in \autoref{related:sec:ape}.
 
 
 \section{Trace Link Recovery}
 \label{related:sec:tlr}
 
-Before the emergence of machine learning and \LLMs \textit{todo expand}
+Before the emergence of \LLMs \IR methods were used to recover \TLs.
+\citewithauthor{delucia2012InformationRetrieval} have provided an overview about different \IR methods and their performance. 
 
-\citewithauthor{delucia2012InformationRetrieval} have written about different \IR methods and their performance. \textit{Todo: Maybe write about the paper?}
-
-
-\citewithauthor{keim2021TraceLink} have proposed cross domain trace link recovery using agent like algorithms. 
-%TODO: Maybe read the paper?}
+More recently, in work by \citewithauthor{hey2021ImprovingTraceability} they tried to overcome the semantic gap, when two instances of the same artifact are described using differing semantics, by exploring word embedding.
+\citewithauthor{keim2021TraceLink} have proposed cross-domain trace link recovery using agent-like machine learning algorithms. 
 
 
 
 In previous work by \citewithauthor{fuchss2025LiSSAGeneric}, simple prompts by \citewithauthor{ewald2024RetrievalAugmentedLarge} were used to recover trace links between software documentation and architectural diagrams.
-The work of \citeauthor{ewald2024RetrievalAugmentedLarge} also builds on \citewithauthor{rodriguez2023PromptsMatter}.
+The work of \citeauthor{ewald2024RetrievalAugmentedLarge} adapts prompts studied by \citewithauthor{rodriguez2023PromptsMatter}.
 These prompts were manually designed and formulated.
 They have proven that they can already outperform other state-of-the-art approaches for source code related \TLR domains.
 
 \citewithauthor{hey2025RequirementsTraceability} have used these same prompts for \TLR in the domain of requirements to requirements.
-While they were also able to outperform state-of-the-art approaches, the recall rate for larger data sets still has room for improvement.
+While they were also able to outperform state-of-the-art approaches, the recall rate, especially for larger data sets, still has room for improvement.
 
 \citewithauthor{rodriguez2023PromptsMatter} have also evaluated LLM usage for trace link recovery.
 Their main takeaway was that even minor adjustments, \directQuote[sec. VI]{such as pluralizing words, interchanging prepositions, or reordering phrases}{rodriguez2023PromptsMatter} lead to major differences in the outcome.
 They were unable to find a singular generalized optimal prompt to cover all TLR tasks.
 They manually adjusted prompts for each task to greatly improve recovery rates.
 
+My work will build on these previous developments. 
+I aim to improve recovery rates further by using automatically optimized prompts.
+
 
 \section{Automatic Prompt Engineering}
 \label{related:sec:ape}
-Many prompt optimization algorithms require an initial prompt to start the refinement process by using training data consisting of input/output pairs~\cite{ramnath2025SystematicSurvey}.
-
+Many prompt optimization algorithms require an initial prompt to start the refinement process by using training data consisting of input/output pairs~\cite{ramnath2025SystematicSurvey}. 
 The Automatic Prompt Engineer by \citewithauthor{zhou2023LargeLanguage} can generate prompts for tasks that are specified only by input/output pairs.
 This eliminates the need for the initial prompt to seed the optimization process.
 
-Self-Refine by \citewithauthor{madaan2023SelfRefineIterative} uses feedback from the same large language model that generated the prompt, to improve the prompt further.
+Self-Refine by \citewithauthor{madaan2023SelfRefineIterative} takes feedback from the same large language model that generated the prompt, to improve it further.
 This imitates human behavior when initial drafts are adjusted rapidly.
 
 ProTeGi by \citewithauthor{pryzant2023AutomaticPrompt} utilizes a gradient descent algorithm to find the minimal deviance between an optimized prompt and the expected outputs.
